--- a/css/top.css
+++ b/css/top.css
@@ -44,6 +44,21 @@ ul{
     margin-left: auto;
     margin-right: auto;
 }
+.hidden-icon{
+    display: none;
+    position: relative;
+    top:20px;
+    background-color: rgb(168, 168, 168, 0.8);
+    text-align: center;
+}
+.hidden-icon ul li{
+    border: 1px solid white;
+    border-collapse: collapse;
+}
+.search-icon:hover + .hidden-icon,.hidden-icon:hover{
+    outline: none;
+    display: block;
+}
 .search-icon{
     position: relative;
     display: flex;
@@ -70,6 +85,7 @@ ul{
     padding-left: 10px;
 }
 .search input[type="text"]:focus{
+    color: white;
     outline-style: none;
 }
 .search button{
