--- a/css/side.css
+++ b/css/side.css
@@ -6,8 +6,30 @@
     position: fixed;
     overflow: auto;
 }
+
 .side::-webkit-scrollbar{
-    display: none;
+    width: 10px;
+    height: 10px;
+}
+.side::-webkit-scrollbar-track {
+    width: 6px;
+    background: rgba(#101F1C, 0.1);
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+}
+.side::-webkit-scrollbar-thumb {
+    background-color: rgba(144,147,153,.5);
+    background-clip: padding-box;
+    min-height: 28px;
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+    transition: background-color .3s;
+    cursor: pointer;
+}
+.side::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(144,147,153,.3);
 }
 .menu{
     position: relative;
