--- a/css/top.css
+++ b/css/top.css
@@ -1,3 +1,5 @@
+/* ------------------------------整体布局 Start---------------------------------- */
+/* 设置边距 */
 *{
     margin: 0;
     padding: 0;
@@ -6,36 +8,72 @@ body{
     transform: none;
     min-width: 1200px;
 }
+/* 网页内跳转留白 */
 html{
-    scroll-padding-top: 100px;
+    scroll-padding-top: 130px;
 }
+/* 取消标签下划线 */
 a{
     text-decoration: none;
 }
-li{
-    list-style: none;
-    overflow: hidden;
-}
+/* 取消列表样式 */
 ul{
     list-style: none;
     margin: 0;
     padding: 0;
 }
+li{
+    list-style: none;
+    overflow: hidden;
+}
+/* 美化滚动条 */
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
 
+::-webkit-scrollbar-track {
+    width: 6px;
+    background: rgba(#101F1C, 0.1);
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(144,147,153,.5);
+    background-clip: padding-box;
+    min-height: 28px;
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius: 2em;
+    transition: background-color .3s;
+    cursor: pointer;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(144,147,153,.3);
+}
+/* ----------------------------整体布局 End------------------------------------ */
+/* 头部 */
 .top{
     top: 0;
     width: 100%;
     height: 100px;
+    border-bottom: 2px solid white;
     background-color: rgb(55, 55, 55);
     position: fixed;
     display: flex;
     z-index: 2;
 }
-.logo{
+/* 图标 */
+.logo img{
+    margin-top: 20px;
     margin-left: 20px;
-    font-size: 80px;
-    width: 100px;
+    width: 80px;
+    height: 80px;
 }
+/* ------------------------------搜索框Start---------------------------------- */
 .search{
     display: flex;
     width: 500px;
@@ -44,20 +82,41 @@ ul{
     margin-left: auto;
     margin-right: auto;
 }
+/* 切换搜索 */
 .hidden-icon{
     display: none;
-    position: relative;
-    top:20px;
-    background-color: rgb(168, 168, 168, 0.8);
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    top:82px;
+    background-color: rgba(100, 100, 100, 0.6);
     text-align: center;
-}
-.hidden-icon ul li{
-    border: 1px solid white;
-    border-collapse: collapse;
 }
 .search-icon:hover + .hidden-icon,.hidden-icon:hover{
     outline: none;
     display: block;
+    margin-left: -40px;
+}
+.hidden-icon li{
+    border: 1px solid white;
+    border-collapse: collapse;
+    float: left;
+}
+.hidden-icon li a{
+    padding: 20px;
+    color: white;
+    display: block;
+}
+.hidden-icon li a:hover{
+    color: aquamarine;
+    background-color: rgba(255, 255, 255, 0.3);
+}
+.hidden-icon li a:active{
+    background-color: brown;
+}
+.hidden-icon li .current-engine{
+    color: rgba(1, 1, 1, 1);
+    background-color: blanchedalmond;
 }
 .search-icon{
     position: relative;
@@ -103,3 +162,4 @@ ul{
 .search button:hover{
     cursor: pointer;
 }
+/* -----------------------搜索框End------------------------- */
