添加背景，美化一点布局

--- a/css/content.css
+++ b/css/content.css
@@ -1,5 +1,5 @@
 .content{
-    background-color: #252525;
+    background-color: rgba(25, 25, 25, .6);
     margin-left: 150px;
     margin-top: 100px;
     padding-top: 20px;
