--- a/css/side.css
+++ b/css/side.css
@@ -2,7 +2,7 @@
     top:100px;
     height: calc(100% - 100px);
     width: 150px;
-    background-color: rgb(55, 55, 55);
+    background-color: rgba(55, 55, 55, .6);
     position: fixed;
     overflow: auto;
 }
