--- a/css/content/overall.css
+++ b/css/content/overall.css
@@ -25,6 +25,7 @@
 }
 .website{
     background-color: rgba(114, 114, 114, 0.5);
+    border-radius: 20px;
     padding: 10px;
     margin: 20px;
     width: 180px;
@@ -33,7 +34,11 @@
     z-index: 1;
 }
 .website:hover{
+    background-color: rgba(234, 234, 234, 0.5);
     cursor: pointer;
+}
+.website-magic{
+    color: rgb(255, 135, 135);
 }
 .website img{
     height: 50px;
