--- a/css/content/tooltip.css
+++ b/css/content/tooltip.css
@@ -1,12 +1,12 @@
 .tooltip .tooltiptext{
     display: none;
     position: absolute;
-    width: 200px;
-    max-width: 200px;
+    width: 180px;
+    max-width: 180px;
     margin: 0 auto;
     margin-top: -20px;
     margin-left: 20px;
-    padding: 5px 0;
+    padding: 10px 10px;
     border-radius: 10px;
     float: left;
     background-color: rgba(0, 0, 0, 0.5);
