--- a/css/header/search.css
+++ b/css/header/search.css
@@ -57,9 +57,12 @@
     border-right: 0;
     border-left: 0;
     background-color: transparent;
-    color: rgb(117, 117, 117);
+    color: rgb(255, 255, 255);
     font-size: 16px;
     padding-left: 10px;
+}
+#key{
+    color: aqua;
 }
 .search input[type="text"]:focus{
     color: white;
@@ -79,5 +82,15 @@
 }
 .search button:hover{
     cursor: pointer;
+}
+/*设置搜索框默认文字颜色！CSS3的新特性*/
+input:-moz-placeholder,textarea:-moz-placeholder{
+color: #ffffff;
+}
+input:-ms-input-placeholder,textarea:-ms-input-placeholder{
+color: #ffffff;
+}
+input::-webkit-input-placeholder,textarea::-webkit-input-placeholder{
+color: #ffffff;
 }
 /* -----------------------搜索框End------------------------- */
