--- a/css/sidebar/s_overall.css
+++ b/css/sidebar/s_overall.css
@@ -1,5 +1,6 @@
 .side{
     top:100px;
+    border-right: 2px solid white;
     height: calc(100% - 100px);
     width: 150px;
     background-color: rgba(55, 55, 55, .6);
@@ -25,7 +26,7 @@
     padding: 10px 0;
     display: block;
     color: white;
-    border: 1px dotted rgba(255, 0, 0, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.5);
     border-collapse: collapse;
 }
 .menu ul li a:hover{
